@@ -17,33 +17,33 @@ import java.util.stream.Collectors;
 @Service
 @AllArgsConstructor
 public class LocationFacade {
-    private LocationService locationService;
+    private LocationService locationServiceImpl;
     private LocationMapper locationMapper;
 
     @Transactional(readOnly = true)
     public Location findLocationByUuid(UUID uuid) {
-        return locationMapper.map(locationService.findByUuid(uuid));
+        return locationMapper.map(locationServiceImpl.findByUuid(uuid));
     }
 
 
     @Transactional(readOnly = true)
     public List<Location> findAllLocation() {
-        return locationService
+        return locationServiceImpl
                 .findAll()
                 .stream()
                 .map(locationEntity -> locationMapper.map(locationEntity))
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     public Location createLocation(CreateLocationInput input) {
-        return locationMapper.map(locationService.createLocation(input));
+        return locationMapper.map(locationServiceImpl.createLocation(input));
     }
 
     public Location updateLocation(UpdateLocationInput input) {
 
-        LocationEntity location = locationService.findByUuid(input.getUuid());
+        LocationEntity location = locationServiceImpl.findByUuid(input.getUuid());
         location.setName(input.getName());
-        return locationMapper.map(locationService.updateLocation(location));
+        return locationMapper.map(locationServiceImpl.updateLocation(location));
     }
 }
